Adds folders to file structure

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Title from document</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="css/styles.css" />
   <style>
     .gs-share {margin-bottom: 12px;}
   </style>
@@ -24,6 +24,6 @@
   <button data-url="URL-from-data" data-title="TITLE-from-data" class="js-gs-share">Share on GNU social</button>
 </div>
 
-<script src="gs-share.js"></script>
+<script src="js/gs-share.js"></script>
 </body>
 </html>
