Move 'icon' example to main index.html

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
   <button data-url="URL-from-data" data-title="TITLE-from-data" class="js-gs-share">Share on GNU social</button>
 </div>
 
+<h2>Using the "gs-share--icon" class</h2>
+<div class="gs-share">
+  <button data-url="URL-from-data" data-title="TITLE-from-data" class="js-gs-share gs-share--icon">Share on GNU social</button>
+</div>
+
 <script src="js/gs-share.js"></script>
 </body>
 </html>
