--- a/index-fr.html
+++ b/index-fr.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8" />
   <title>Titre à partir du document</title>
   <link rel="stylesheet" href="css/styles.css" />
   <style>
